Fix bar charts alignment.

--- a/_sass/custom/_bar.scss
+++ b/_sass/custom/_bar.scss
@@ -11,7 +11,7 @@
     border-radius: 10px;
     background: #0071B0;
     display: inline-block;
-    margin: 1px 1px 5px 1px;
+    margin: 1px 1px 7px 1px;
   }
   .bar-fill-0 {
     width: 0%;
